[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/2D/Timeline2D/Timeline2D.gd" type="Script" id=2]
[ext_resource path="res://assets/timeline/queue_finish.png" type="Texture" id=3]
[ext_resource path="res://assets/timeline/queue_start.png" type="Texture" id=4]
[ext_resource path="res://assets/timeline/detail_bubble.png" type="Texture" id=5]
[ext_resource path="res://scenes/Ui/RegularLabel/RegularLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://default_theme.tres" type="Theme" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 218, 52 )

[node name="Timeline2D" type="Node"]
script = ExtResource( 2 )

[node name="Body" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -80.0
margin_right = 218.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BubbleContainer" type="CenterContainer" parent="Body"]
margin_right = 218.0
margin_bottom = 52.0
rect_min_size = Vector2( 218, 52 )

[node name="Bubble" type="PanelContainer" parent="Body/BubbleContainer"]
visible = false
margin_right = 218.0
margin_bottom = 52.0
rect_min_size = Vector2( 218, 52 )
custom_styles/panel = SubResource( 1 )

[node name="Body" type="VBoxContainer" parent="Body/BubbleContainer/Bubble"]
margin_right = 218.0
margin_bottom = 52.0
custom_constants/separation = 2

[node name="TitleContainer" type="MarginContainer" parent="Body/BubbleContainer/Bubble/Body"]
margin_right = 218.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/margin_top = 3

[node name="ColorRect" type="ColorRect" parent="Body/BubbleContainer/Bubble/Body/TitleContainer"]
margin_top = 3.0
margin_right = 218.0
margin_bottom = 15.0
color = Color( 0.0784314, 0.0941176, 0.180392, 1 )

[node name="TextMargin" type="MarginContainer" parent="Body/BubbleContainer/Bubble/Body/TitleContainer"]
margin_top = 3.0
margin_right = 218.0
margin_bottom = 15.0
custom_constants/margin_right = 4
custom_constants/margin_left = 4

[node name="Label" parent="Body/BubbleContainer/Bubble/Body/TitleContainer/TextMargin" instance=ExtResource( 6 )]
margin_left = 4.0
margin_top = 0.0
margin_right = 214.0
margin_bottom = 12.0
text = "Eugene's next turn"
autowrap = true

[node name="LinesScroller" type="MarginContainer" parent="Body/BubbleContainer/Bubble/Body"]
margin_top = 17.0
margin_right = 218.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
theme = ExtResource( 8 )

[node name="Lines" type="VBoxContainer" parent="Body/BubbleContainer/Bubble/Body/LinesScroller"]
margin_right = 218.0
margin_bottom = 35.0
custom_constants/separation = 0

[node name="Parts" type="HBoxContainer" parent="Body"]
margin_top = 56.0
margin_right = 218.0
margin_bottom = 80.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QueueStartContainer" type="MarginContainer" parent="Body/Parts"]
margin_right = 15.0
margin_bottom = 24.0
custom_constants/margin_top = 3

[node name="QueueStart" type="TextureRect" parent="Body/Parts/QueueStartContainer"]
margin_top = 3.0
margin_right = 15.0
margin_bottom = 24.0
texture = ExtResource( 4 )

[node name="QueueFinish" type="TextureRect" parent="Body/Parts"]
margin_left = 16.0
margin_right = 31.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
texture = ExtResource( 3 )
